--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: 필라델피아 성모마리아 한인성당
-email: hollymary@hollymary.com
+email: sla100media@gmail.com
 description: >
   Holy Mary Korean Catholic Church |
   주임신부: 이상용(사도요한) Rev. Sang Yong Lee |
@@ -33,6 +33,7 @@ facebook_username: hollymary
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-email-protect
 
 # Exclude from processing.
 # The following items will not be processed, by default.
